--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -27,15 +27,13 @@
 \acro{func}[func.]{function}
 \acro{vs}[vs.]{versus}
 \acro{freq}[freq.]{frequency}
-\acro{iid}[i.i.d.]{independent \& identically distributed}
 \acro{st}[s.t.]{subject to}
 
+\acro{iid}[i.i.d.]{independent \& identically distributed}
 \acro{LSI}{linear shift invariant}
-
 \acro{pdf}[pdf.]{Probability Density Function}
 \acro{MLE}{Maximum Likelihood Estimation}
 \acro{MAP}{Maximum A Posteriori}
-
 \acro{MoG}{Mixture of Gaussians}
 \acro{SVM}{State Vector Machine}
 
@@ -62,13 +60,16 @@
 \acro{iLQR}{Iterative Linear Quadratic Regulator}
 \acro{MPC}{Model Predictive Control}
 \acro{FLM}{Fitted Local Model}
+\acro{FFT}{Fast Fourier Transform}
 
 % Neural-network-related term
+\acro{MLP}{Multi-Layer Perceptron}
 \acro{relu}[ReLU]{Rectified Linear Unit}
 \acro{BPTT}{Backpropagation through time}
 \acro{RNN}{Recurrent Neural Network}
 \acro{LSTM}{Long short-term memory}
 \acro{CNN}{Convolutional Neural Network}
+\acro{GNN}{Graph Neural Network}
 \acro{CONV}{Convolutional}
 \acro{FC}{Fully Connected}
 \acro{VAE}{Variational Auto-Encoders}
@@ -77,7 +78,11 @@
 \acro{CGAN}{Conditional Generative Adversarial Network}
 \acro{SRGAN}{Super Resolution Generative Adversarial Network}
 \acro{ESRGAN}{Enhanced Super Resolution Generative Adversarial Network}
-\acro{ResNet}{Residual Network}	
+\acro{ResNet}{Residual Network}
+\acro{BatchNorm}{Batch Normalization}
+\acro{IN}{Instance Normalization}
+\acro{AdaIN}{Adaptive Instance Normalization}
+\acro{NAS}{Neural Architecture Search}
 
 % Robotics
 \acro{dof}[DOF]{degrees of freedom}
@@ -92,6 +97,7 @@
 \acro{MHEKF}{Multi-Hypothesis Extended Kalman Filter}
 
 % Reinforcement learning related
+\acro{HMM}{Hidden Markov Model}
 \acro{MDP}{Markov Decision Process}
 \acro{POMDP}{Partially Observable Markov Decision Process}
 \acro{TSP}{Travelling Salesman Problem}
@@ -121,11 +127,24 @@
 \acro{HOG}{Histogram of Oriented Gradients}
 \acro{SSIM}{Structural Similarity Index}
 \acro{SRCNN}{Super Resolution Convolutional Neural Network}
+\acro{PPL}{Perceptual path length}
+\acro{FID}{Fréchet inception distance}
 
 % Psychology related
 \acro{US}{unconditioned stimuli}
 \acro{UR}{unconditioned response}
 \acro{CS}{conditioned stimuli}
 \acro{CR}{conditioned response}
+% Neuroscience related
+\acro{CNS}{central nervous system}
+\acro{PNS}{peripheral nervous system}
+\acro{EEG}{Electroencephalography}
+\acro{fMRI}{Functional Magnetic Resonance Imaging}
+\acro{ECoG}{Electrocorticography}
+\acro{LFP}{Local Field Potentials}
+\acro{BCI}{Brain-Computer Interface}
+\acro{BMI}{Brain Machine Interface}
+\acro{NMP}{neuromotor prostheses}
+\acro{PSD}{Power Spectral Density}
 
 \end{acronym}
