--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -38,6 +38,7 @@
 @STRING{or		= {Operations Research} }
 @STRING{orl		= {Operations Research Letters} }
 @STRING{tsmc	= {IEEE Trans. on Systems, Man, and Cybernetics} }
+@STRING{ssci	= {IEEE Symposium Series on Computational Intelligence (SSCI)} }
 
 @book{goodfellow2016deep,
 	title={Deep learning},
@@ -1518,6 +1519,249 @@
 	number={4},
 	year={2006},
 	publisher={Springer}
+}
+@article{jospin2022hands,
+	title={Hands-on Bayesian neural networks—A tutorial for deep learning users},
+	author={Jospin, Laurent Valentin and Laga, Hamid and Boussaid, Farid and Buntine, Wray and Bennamoun, Mohammed},
+	journal={IEEE Computational Intelligence Magazine},
+	volume={17},
+	number={2},
+	pages={29--48},
+	year={2022},
+	publisher={IEEE}
+}
+@article{shridhar2019comprehensive,
+	title={A comprehensive guide to bayesian convolutional neural network with variational inference},
+	author={Shridhar, Kumar and Laumann, Felix and Liwicki, Marcus},
+	journal={arXiv preprint arXiv:1901.02731},
+	year={2019}
+}
+@article{liu2018adv,
+	title={Adv-bnn: Improved adversarial defense through robust bayesian neural network},
+	author={Liu, Xuanqing and Li, Yao and Wu, Chongruo and Hsieh, Cho-Jui},
+	journal={arXiv preprint arXiv:1810.01279},
+	year={2018}
+}
+@misc{sanchez2021a,
+	author={Benjamin Sanchez-Lengeling and Emily Reif and Adam Pearce and Alexander B. Wiltschko},
+	title = {A Gentle Introduction to Graph Neural Networks},
+	howpublished = {\url{https://distill.pub/2021/gnn-intro/}},
+	year={2021},
+	note = {Accessed: 2022/08/24}
+}
+@misc{daigavane2021understanding,
+	author={Daigavane, Ameya and Ravindran, Balaraman and Aggarwal, Gaurav},
+	title = {Understanding Convolutions on Graphs},
+	howpublished = {\url{https://distill.pub/2021/understanding-gnns/}},
+	year={2021},
+	note = {Accessed: 2022/08/24}
+}
+@misc{gordic2021how,
+	author={Gordić, Aleksa},
+	title = {How to get started with Graph Machine Learning},
+	howpublished = {\url{https://gordicaleksa.medium.com/how-to-get-started-with-graph-machine-learning-afa53f6f963a}},
+	year={2021},
+	note = {Accessed: 2022/08/24}
+}
+@article{lin2022efficient,
+	title={Efficient and interpretable robot manipulation with graph neural networks},
+	author={Lin, Yixin and Wang, Austin S and Undersander, Eric and Rai, Akshara},
+	journal={IEEE Robotics and Automation Letters},
+	volume={7},
+	number={2},
+	pages={2740--2747},
+	year={2022},
+	publisher={IEEE}
+}
+@article{sharbrough1991american,
+	title={American Electroencephalographic Society guidelines for standard electrode position nomenclature},
+	author={Sharbrough, FCGE},
+	journal={J clin Neurophysiol},
+	volume={8},
+	pages={200--202},
+	year={1991}
+}
+@article{wolpaw2000brain,
+	title={Brain-computer interface research at the Wadsworth Center},
+	author={Wolpaw, Jonathan R and McFarland, Dennis J and Vaughan, Theresa M},
+	journal={IEEE transactions on rehabilitation engineering},
+	volume={8},
+	number={2},
+	pages={222--226},
+	year={2000},
+	publisher={IEEE}
+}
+@inproceedings{hoshino2021brain,
+	title={Brain-Mobility-Interface based on Deep Learning Techniques for Classifying EEG Signals into Control Commands},
+	author={Hoshino, Satoshi and Tagami, Takuya and Yagi, Hideaki and Kanda, Kohnosuke},
+	booktitle={2021 IEEE/SICE International Symposium on System Integration (SII)},
+	pages={150--156},
+	year={2021},
+	organization={IEEE}
+}
+@article{pfurtscheller2001motor,
+	title={Motor imagery and direct brain-computer communication},
+	author={Pfurtscheller, Gert and Neuper, Christa},
+	journal={Proceedings of the IEEE},
+	volume={89},
+	number={7},
+	pages={1123--1134},
+	year={2001},
+	publisher={IEEE}
+}
+@inproceedings{wang2019deep,
+	title={Deep network interpolation for continuous imagery effect transition},
+	author={Wang, Xintao and Yu, Ke and Dong, Chao and Tang, Xiaoou and Loy, Chen Change},
+	booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+	pages={1692--1701},
+	year={2019}
+}
+@inproceedings{zhang2019zoom,
+	title={Zoom to learn, learn to zoom},
+	author={Zhang, Xuaner and Chen, Qifeng and Ng, Ren and Koltun, Vladlen},
+	booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+	pages={3762--3770},
+	year={2019}
+}
+@InProceedings{wang2021realesrgan,
+	author    = {Xintao Wang and Liangbin Xie and Chao Dong and Ying Shan},
+	title     = {Real-ESRGAN: Training Real-World Blind Super-Resolution with Pure Synthetic Data},
+	booktitle = {International Conference on Computer Vision Workshops (ICCVW)},
+	date      = {2021}
+}
+@inproceedings{huang2017densely,
+	title={Densely connected convolutional networks},
+	author={Huang, Gao and Liu, Zhuang and Van Der Maaten, Laurens and Weinberger, Kilian Q},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={4700--4708},
+	year={2017}
+}
+@inproceedings{karras2019style,
+	title={A Style-Based Generator Architecture for Generative Adversarial Networks},
+	author={Karras, Tero and Laine, Samuli and Aila, Timo},
+	booktitle=cvpr,
+	pages={4401--4410},
+	year={2019}
+}
+@inproceedings{karras2020analyzing,
+	title={Analyzing and Improving the Image Quality of StyleGAN},
+	author={Karras, Tero and Laine, Samuli and Aittala, Miika and Hellsten, Janne and Lehtinen, Jaakko and Aila, Timo},
+	booktitle=cvpr,
+	pages={8110--8119},
+	year={2020}
+}
+@inproceedings{huang2017arbitrary,
+	title={Arbitrary style transfer in real-time with adaptive instance normalization},
+	author={Huang, Xun and Belongie, Serge},
+	booktitle={Proceedings of the IEEE international conference on computer vision},
+	pages={1501--1510},
+	year={2017}
+}
+@article{ulyanov2016texture,
+	title={Texture networks: Feed-forward synthesis of textures and stylized images},
+	author={Ulyanov, Dmitry and Lebedev, Vadim and Vedaldi, Andrea and Lempitsky, Victor},
+	journal={arXiv preprint arXiv:1603.03417},
+	year={2016}
+}
+@inproceedings{ioffe2015batch,
+	title={Batch normalization: Accelerating deep network training by reducing internal covariate shift},
+	author={Ioffe, Sergey and Szegedy, Christian},
+	booktitle={International conference on machine learning},
+	pages={448--456},
+	year={2015},
+	organization={PMLR}
+}
+@article{dumoulin2016learned,
+	title={A learned representation for artistic style},
+	author={Dumoulin, Vincent and Shlens, Jonathon and Kudlur, Manjunath},
+	journal={arXiv preprint arXiv:1610.07629},
+	year={2016}
+}
+@article{karras2021alias,
+	title={Alias-free generative adversarial networks},
+	author={Karras, Tero and Aittala, Miika and Laine, Samuli and H{\"a}rk{\"o}nen, Erik and Hellsten, Janne and Lehtinen, Jaakko and Aila, Timo},
+	journal=NeurIPS,
+	volume={34},
+	pages={852--863},
+	year={2021}
+}
+@article{heusel2017gans,
+	title={GANs trained by a two time-scale update rule converge to a local Nash equilibrium},
+	author={Heusel, Martin and Ramsauer, Hubert and Unterthiner, Thomas and Nessler, Bernhard and Hochreiter, Sepp},
+	journal=NeurIPS,
+	volume={30},
+	year={2017}
+}
+@inproceedings{liu2018progressive,
+	title={Progressive Neural Architecture Search},
+	author={Liu, Chenxi and Zoph, Barret and Neumann, Maxim and Shlens, Jonathon and Hua, Wei and Li, Li-Jia and Fei-Fei, Li and Yuille, Alan and Huang, Jonathan and Murphy, Kevin},
+	booktitle=eccv,
+	pages={19--34},
+	year={2018}
+}
+@article{zoph2016neural,
+	title={Neural Architecture Search with Reinforcement Learning},
+	author={Zoph, Barret and Le, Quoc V},
+	journal={arXiv preprint arXiv:1611.01578},
+	year={2016}
+}
+@inproceedings{pham2018efficient,
+	title={Efficient Neural Architecture Search via Parameter Sharing},
+	author={Pham, Hieu and Guan, Melody and Zoph, Barret and Le, Quoc and Dean, Jeff},
+	booktitle=icml,
+	pages={4095--4104},
+	year={2018},
+	organization={PMLR}
+}
+@article{liu2018darts,
+	title={DARTS: Differentiable architecture search},
+	author={Liu, Hanxiao and Simonyan, Karen and Yang, Yiming},
+	journal={arXiv preprint arXiv:1806.09055},
+	year={2018}
+}
+@inproceedings{shrivastava2017learning,
+	title={Learning from simulated and unsupervised images through adversarial training},
+	author={Shrivastava, Ashish and Pfister, Tomas and Tuzel, Oncel and Susskind, Joshua and Wang, Wenda and Webb, Russell},
+	booktitle=cvpr,
+	pages={2107--2116},
+	year={2017}
+}
+@article{hofer2020perspectives,
+	title={Perspectives on Sim2Real transfer for robotics: A summary of the Robotics: Science and System 2020 workshop},
+	author={H{\"o}fer, Sebastian and Bekris, Kostas and Handa, Ankur and Gamboa, Juan Camilo and Golemo, Florian and Mozifian, Melissa and Atkeson, Chris and Fox, Dieter and Goldberg, Ken and Leonard, John and others},
+	journal={arXiv preprint arXiv:2012.03806},
+	year={2020}
+}
+@inproceedings{bousmalis2017unsupervised,
+	title={Unsupervised pixel-level domain adaptation with generative adversarial networks},
+	author={Bousmalis, Konstantinos and Silberman, Nathan and Dohan, David and Erhan, Dumitru and Krishnan, Dilip},
+	booktitle=cvpr,
+	pages={3722--3731},
+	year={2017}
+}
+@inproceedings{sun2016return,
+	title={Return of frustratingly easy domain adaptation},
+	author={Sun, Baochen and Feng, Jiashi and Saenko, Kate},
+	booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+	volume={30},
+	number={1},
+	year={2016}
+}
+@inproceedings{chebotar2019closing,
+	title={Closing the sim-to-real loop: Adapting simulation randomization with real world experience},
+	author={Chebotar, Yevgen and Handa, Ankur and Makoviychuk, Viktor and Macklin, Miles and Issac, Jan and Ratliff, Nathan and Fox, Dieter},
+	booktitle=icra,
+	pages={8973--8979},
+	year={2019},
+	organization={IEEE}
+}
+@inproceedings{zhao2020sim,
+	title={Sim-to-Real Transfer in Deep Reinforcement Learning for Robotics: a Survey},
+	author={Zhao, Wenshuai and Queralta, Jorge Pe{\~n}a and Westerlund, Tomi},
+	booktitle=ssci,
+	pages={737--744},
+	year={2020},
+	organization={IEEE}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
