--- a/Contents/hyperparameter-optimization.tex
+++ b/Contents/hyperparameter-optimization.tex
@@ -80,3 +80,19 @@ Current good tools for hyper\ac{param} search:
 	\item \href{https://youtu.be/ttE0F7fghfk}{Siraj Raval YouTube}
 	\item \href{https://www.youtube.com/channel/UCS1dQr2X_ComHN4PXYDS4gA}{Machine Learning Mastery YouTube}
 \end{itemize}
+
+\chapter{Neural Architecture Search}
+\todo{\ac{NAS}}
+\begin{itemize}
+	\item \ac{NAS} is still a novel field, approaches are still expensive and slightly complicated
+	\item \ac{NAS} currently (2022) search for micro architecture, not macro.
+\end{itemize}
+
+\section{References}
+\begin{itemize}
+	\item \href{https://youtu.be/wL-p5cjDG64}{Microsoft Research video}
+	\item \citeaustitle{zoph2016neural}
+	\item \citeaustitle{pham2018efficient}
+	\item \citeaustitle{liu2018progressive}
+	\item \citeaustitle{liu2018darts}
+\end{itemize}
