--- a/RL_notes.tex
+++ b/RL_notes.tex
@@ -26,6 +26,7 @@ fleqn
 \mainmatter
 \include{Contents/abbrievations.tex}
 \include{Contents/rl-overview.tex}
+\include{Contents/mdp.tex}
 \include{Contents/imitation-learning.tex}
 \include{Contents/policy-gradient.tex}
 \include{Contents/actor-critic.tex}
