--- a/robotics.tex
+++ b/robotics.tex
@@ -32,7 +32,8 @@ fleqn
 	\include{Contents/robotics-system-engineering.tex}
 	\include{Contents/robotics-sensor-systems.tex}
 	\include{Contents/probabilistic-robotics.tex}
-	\include{Contents/mdp.tex}	
+	\include{Contents/robotics-gnn.tex}
+	\include{Contents/sim2real.tex}
 	\include{Contents/robotics-research-proposal.tex}
 	
 	\backmatter
